element injector and its drawbacks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
+<style>
+    :host {
+        display: flex;
+        gap: 100px;
+        justify-content: space-between;
+    }
+    
+    :host app-tasks{
+        width: 50%;
+    }
+</style>
+<app-tasks />
 <app-tasks />
