inject services into services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<style>
+<!-- <style>
     :host {
         display: flex;
         gap: 100px;
@@ -8,6 +8,5 @@
     :host app-tasks{
         width: 50%;
     }
-</style>
-<app-tasks />
+</style> -->
 <app-tasks />
